apps/overseerr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  ports:
  - port: 5055
    protocol: TCP
    targetPort: 5055
    name: webui
  selector:
    run: overseerr
